# Resurse

./: .gitignore  clean.sh  extract
scripts/: .env  analyse.sh  analyse2.py  analyse2.sh  clean.sh  extract.sh  mock.py  pyproject.toml
