[tool.poetry]
name = "ubbcache"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
langchain-text-splitters = "^0.2.2"
langchain-openai = "^0.1.22"
langchain-ollama = "^0.1.1"
requests = "^2.32.3"
ollama = "^0.3.1"
pypdf2 = "^3.0.1"
docx = "^0.2.4"
python-docx = "^1.1.2"

[tool.poetry.group.dev.dependencies]
langchain-chroma = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
