[project]
name = "ubbcache"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
readme = "README.md"
authors = [
    {name = "Your Name", email = "you@example.com"}
]

dependencies = [
    "langchain==0.2.14",
    "langchain-community==0.2.12",
    "langchain-text-splitters==0.2.2",
    "langchain-openai==0.1.22",
    "langchain-ollama==0.1.1",
    "requests==2.32.3",
    "ollama==0.3.1",
    "pypdf2==3.0.1",
    "docx==0.2.4",
    "python-docx==1.1.2",
    "docx2txt==0.8",
    "nltk==3.9.1",
    "transformers==4.44.2",
    "torch==2.4.0",
    "scikit-learn==1.5.1",
    "pypdf==4.3.1",
    "python-dotenv==1.0.0", 
]

[project.optional-dependencies]
dev = ["langchain-chroma==0.1.3"]
